<resources>
    <string name="app_name">Kick_off_app</string>
    <string name="title_stadium">Stadium</string>
    <string name="title_referee">Referee</string>
    <string name="title_matching">Matching</string>
    <string name="title_community">Community</string>
    <string name="title_mypage">MyPage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="native_app_key">37cc79f30e80e40306512fd1b4241978</string>
    <string name="kakao_key">kakao37cc79f30e80e40306512fd1b4241978</string>
</resources>